# audacious-win-smtc

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build_msys2.sh  win-smtc.cpp
cppwinrt/winrt/: Windows.AI.MachineLearning.Preview.h  Windows.AI.MachineLearning.h  Windows.ApplicationModel.Activation.h  Windows.ApplicationModel.AppExtensions.h  Windows.ApplicationModel.AppService.h  Windows.ApplicationModel.Appointments.AppointmentsProvider.h  Windows.ApplicationModel.Appointments.DataProvider.h  Windows.ApplicationModel.Appointments.h  Windows.ApplicationModel.Background.h  Windows.ApplicationModel.Calls.Background.h  Windows.ApplicationModel.Calls.Provider.h  Windows.ApplicationModel.Calls.h  Windows.ApplicationModel.Chat.h  Windows.ApplicationModel.CommunicationBlocking.h  Windows.ApplicationModel.Contacts.DataProvider.h  Windows.ApplicationModel.Contacts.Provider.h  Windows.ApplicationModel.Contacts.h  Windows.ApplicationModel.ConversationalAgent.h  Windows.ApplicationModel.Core.h  Windows.ApplicationModel.DataTransfer.DragDrop.Core.h  Windows.ApplicationModel.DataTransfer.DragDrop.h  Windows.ApplicationModel.DataTransfer.ShareTarget.h  Windows.ApplicationModel.DataTransfer.h  Windows.ApplicationModel.Email.DataProvider.h  Windows.ApplicationModel.Email.h  Windows.ApplicationModel.ExtendedExecution.Foreground.h  Windows.ApplicationModel.ExtendedExecution.h  Windows.ApplicationModel.LockScreen.h  Windows.ApplicationModel.Payments.Provider.h  Windows.ApplicationModel.Payments.h  Windows.ApplicationModel.Preview.Holographic.h  Windows.ApplicationModel.Preview.InkWorkspace.h  Windows.ApplicationModel.Preview.Notes.h  Windows.ApplicationModel.Resources.Core.h  Windows.ApplicationModel.Resources.Management.h  Windows.ApplicationModel.Resources.h  Windows.ApplicationModel.Search.Core.h  Windows.ApplicationModel.Search.h  Windows.ApplicationModel.SocialInfo.Provider.h  Windows.ApplicationModel.SocialInfo.h  (+282 more)
cppwinrt/winrt/impl/: Windows.AI.MachineLearning.0.h  Windows.AI.MachineLearning.1.h  Windows.AI.MachineLearning.2.h  Windows.AI.MachineLearning.Preview.2.h  Windows.ApplicationModel.0.h  Windows.ApplicationModel.1.h  Windows.ApplicationModel.2.h  Windows.ApplicationModel.Activation.0.h  Windows.ApplicationModel.Activation.1.h  Windows.ApplicationModel.Activation.2.h  Windows.ApplicationModel.AppExtensions.0.h  Windows.ApplicationModel.AppExtensions.1.h  Windows.ApplicationModel.AppExtensions.2.h  Windows.ApplicationModel.Background.0.h  Windows.ApplicationModel.Background.1.h  Windows.ApplicationModel.Background.2.h  Windows.ApplicationModel.Calls.0.h  Windows.ApplicationModel.Calls.1.h  Windows.ApplicationModel.Calls.2.h  Windows.ApplicationModel.Calls.Background.0.h  Windows.ApplicationModel.Calls.Background.1.h  Windows.ApplicationModel.Calls.Background.2.h  Windows.ApplicationModel.Calls.Provider.2.h  Windows.ApplicationModel.Contacts.2.h  Windows.ApplicationModel.Contacts.Provider.1.h  Windows.ApplicationModel.ConversationalAgent.0.h  Windows.ApplicationModel.ConversationalAgent.1.h  Windows.ApplicationModel.ConversationalAgent.2.h  Windows.ApplicationModel.Core.0.h  Windows.ApplicationModel.Core.1.h  Windows.ApplicationModel.Core.2.h  Windows.ApplicationModel.DataTransfer.0.h  Windows.ApplicationModel.DataTransfer.1.h  Windows.ApplicationModel.DataTransfer.2.h  Windows.ApplicationModel.Payments.2.h  Windows.ApplicationModel.Preview.Holographic.2.h  Windows.ApplicationModel.Preview.InkWorkspace.0.h  Windows.ApplicationModel.Preview.Notes.0.h  Windows.ApplicationModel.Resources.0.h  Windows.ApplicationModel.Resources.1.h  (+286 more)
